--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,14 @@ button {
   outline: 0;
   box-shadow: none; }
 
-.owl-carousel .owl-item img {
-  width: auto !important; }
+
+  .owl-carousel:not(.heroCarousel) .owl-item img {
+    width: auto !important; }
+
+@media (max-width: 768px) {
+  .owl-carousel .owl-item img {
+    width: auto !important; }
+  }
 
 .section-margin {
   margin-top: 60px;
@@ -61,15 +67,16 @@ button {
   z-index: 50;
   top: 0;
   left: 0;
-  padding: 0;
+  padding: 15px;
   box-shadow: 0px 5px 10px 0px rgba(153, 153, 153, 0.2); }
   .navbar-brand img {
     width: 70px;
-    height: 70px; }
+    height: auto; }
     @media (min-width: 1200px) {
       .navbar-brand img {
-        width: 100px;
-        height: 100px; } }
+            width: 85px;
+    height: auto;
+}}
 
 .mt-20 {
   margin-top: 20px; }
